Lab_2.2 Thiết kế Responsive
Lab_2.2 Thiết kế Responsive

--- a/index.html
+++ b/index.html
@@ -2,67 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DevBlog CSS</title>
+    <title>VU Ski Snow School</title>
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
     <div id="container">
-        <div class="header">
-            <h1>Dev's Blog</h1>
-            <h3>Một góc nhỏ để viết lách và vài ba câu chuyện lập trình :))</h3>
-        </div>
-        <div id="navigation">
-            <div class="menu">
-                <a href="#"> Trang Chủ</a>
-                <a href="#"> Giới Thiệu</a>
-                <a href="#"> FontEnd</a>
-                <a href="#"> BackEnd</a>
-                <a href="#"> Liên Lạc</a>
+        <header>
+            <img class="logo" src="./img/logo.png" alt="logo">
+            <h1 class="title">VU Ski Snow School</h1>
+            <h3 class="title">* Let it snow *</h3>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="#">Event</a></li>
+                <li><a href="#">Lessons</a></li>
+                <li><a href="#">Snow Reports</a></li>
+                <li><a href="#">Employment</a></li>
+            </ul>
+        </nav>
+        <main>
+            <div id="content">
+                <h3 class="heading">Children's Lessons</h3>
+                <p class="content">
+                    Children's full day lessons meet from 10 am throught 3:30pm and include lift access, rentab (aki or anowboard) and lunch. All children(age 4-12) are welcome regardless of ablility
+                    or prior exprience. Out exprt aki snowboard instructions provide special care and afternoon to teach children the corect way to skill and ride, from the basics of carving turns to safety  intruction to 
+                    advanced lessonsand munlti-week programs. We focus on having fun in a safe and reponside way!
+                </p>
+                <h3 class="heading">Terrain Park Lessons</h3>
+                <p class="content">
+                    Out terrain park lessons meet from 12:30pm to 4pm at the base of the Powder keg terrain park and include lift access, rental(aki or snowboard), and an affternoon snack.
+                    We star with the basics and progress thought  all skill levels. Learn how to ride the rails, half pipe, and jumps. Must be 13 year old. Our proven techniques will teach you how to 
+                    maneuver through any terrain park in a fun safy way!
+                </p>
+                <h3 class="heading">Adult Lessons</h3>
+                <p< class="content">
+                    Adult full-day lessons from 9am through 3pm include filt access, rental(aki of snowboard), and lunch. Adults are divided by ability and experience. We have exprert instuction for all levels!
+                </p>
+                <h3 class="heading">Registration</h3>
+                <p>Call or email our 5ki School Manager Teo Nguyen</p>
+                <p>402 Nguyen Thi Minh Khai Street</p>
+                <p>Ward 5, Diatrict 3, HCM City</p>
+                <p>Phone Number: <a href="tel:02871093333">(028)7109-3333</a></p>
+                <p>Email Address: <a href="mailto:teo@vu.edu.vn">WritetoTeoNguyen</a></p>
             </div>
-            <div class="login">
-                <a href="#"> Đăng Nhập</a>
-            </div>
-        </div>
-        <div id="content">
-            <div id="main">
-                <div class="article">
-                    <p>Fontend là gì? </p>
-                    <p>Fontend, Dec 1, 2022</p>
-                    <img src="./Image/1.png" alt="1" width="95%">
-                    <p>Lập trình Fontend là....</p>
-                    <p>Là khái niệm chỉ vị trí công việc của một lập trình viên, người mà sẽ làm việc (tạo ra, sắp xếp vị trí...) các giao diện của một trang web. Giao diệ của một trang web bao gồm 1 số thành phần như: nút, chữ, hình ảnh, logo...</p>
-                </div>
-                <div class="article">
-                    <p>BackEnd là gì?</p>
-                    <p>BackEnd, Dec 2, 2022</p>
-                    <img src="./Image/2.png" alt="2" width="95%">
-                    <p>Lập trình Backend là...</p>
-                    <p>Cũng là khái niệm chỉ công việc của một lập trình viên, người mà sẽ làm những việc (xử lý dữ liệu, logic,...) các chức năng của một trang web. Một số chức năng của 1 trang web thường thấy như: đăng ký, đăng nhập, tìm kiếm,...</p>
-                </div>
-            </div>
-            <div id="sidebar">
-                <div class="blog">
-                    <h3>Về blog</h3>
-                    <img class="img-blog" src="./Image/blog.jpg">
-                    <p>Blog là nơi chia sẻ kiến thức lập trình và một vài câu chuyện xung quanh cuộc sống tác giả...</p>
-                </div>
-                <div class="blog">
-                    <h3>Bài viết gần đây</h3>
-                    <img class="img-blog" src="./Image/fb.jpg">
-                    <img class="img-blog" src="./Image/sql.png">
-                    <img class="img-blog" src="./Image/fs.jpg">
-                </div>
-                <div class="blog2">
-                    <h3>Theo dõi Blog</h3>
-                    <img class="img-blog2" src="./Image/dk.jpg">
-                    <p>Nhấn đăng ký để nhận bài viết mới nhất</p>
-                </div>
-            </div>
-            <div id="footer">
-                <p>Coppyright &copy; 2021-2022</p>
-            </div>
-        </div>       
+        </main>
+        <footer>
+            <a href="#">Lessons</a>
+            <a href="#">Events</a>
+            <a href="#">Top</a>
+        </footer>
+
     </div>
 </body>
 </html>
